--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,17 +11,24 @@ facebook_type:
 facebook_image: images/posts/catmen.jpg
 
 ---
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+    .container {
+         max-width: 1000;
+         margin: auto;
+    }
+    a, p, ul li, ol li, h1, h2, h3, h4, h5, h6{
+        font-family: 'Open Sans', sans-serif;    
+        }
+</style>
+
 <head>
     <title>Home</title>
 
-    <body>
-        <!-- Comment -->
-        Hello?
-        <h1>Header?</h1>
-        <b></b>
-        <h2>Just Testing</h2>
+    <div class="container">
+        {{content}}
 
-    </body>
+    </div>
 </head>
 
 
