--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,8 @@ facebook_type:
 facebook_image: images/posts/catmen.jpg
 
 ---
+<link rel="stylesheet" href="/_sass/koprulu-thene.scss
+">
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
     .container {
