--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,8 +11,7 @@ facebook_type:
 facebook_image: images/posts/catmen.jpg
 
 ---
-<link rel="stylesheet" href="/_sass/koprulu-thene.scss
-">
+
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
     .container {
@@ -24,9 +23,13 @@ facebook_image: images/posts/catmen.jpg
         }
 </style>
 
-<head>
-    <title>Home</title>
 
+<head>
+
+    <title>Home</title>
+    <body>
+        help
+    </body>
     <div class="container">
         {{content}}
 
